# qbittorrent-hs

./: CHANGELOG.md  CLAUDE.md  README.md  cabal.project  qbittorrent.cabal
effectful-qbittorrent/: CHANGELOG.md  effectful-qbittorrent.cabal
effectful-qbittorrent/src/Effectful/: QBittorrent.hs
qbittorrent/: qbittorrent.cabal
qbittorrent-effectful/: CHANGELOG.md  qbittorrent-effectful.cabal
qbittorrent-effectful/src/Effectful/: Qbittorrent.hs
qbittorrent-effectful/src/Network/QBittorrent/: Effectful.hs
qbittorrent/src/Network/: QBittorrent.hs
qbittorrent/src/Network/QBittorrent/: API.hs  Client.hs  SimpleClient.hs  Types.hs
qbittorrent/src/Network/QBittorrent/API/: Auth.hs  Sync.hs  Torrents.hs  Transfer.hs
qbittorrent/src/Network/QBittorrent/Types/: Credential.hs  Filter.hs  Form.hs  Sync.hs  Tag.hs  Torrent.hs  Transfer.hs
src/Network/: QBittorrent.hs
src/Network/QBittorrent/: API.hs  Client.hs  SimpleClient.hs  Types.hs
src/Network/QBittorrent/API/: App.hs  Log.hs  Sync.hs  Torrents.hs
src/Network/QBittorrent/Client/: Auth.hs
src/Network/QBittorrent/Types/: App.hs  Auth.hs  Filter.hs  Form.hs  InfoHash.hs  Log.hs  Sync.hs  Tag.hs  Torrent.hs  Transfer.hs
test/: Main.hs
