cabal-version: 3.0
name:          effectful-qbittorrent
version:       0.1.0.0
synopsis:      Effectful bindings for qBittorrent Web API
description:
  Effectful static effect bindings for the qBittorrent Web API.
  Provides a QBittorrent effect that can be used with the effectful ecosystem.

license:       MIT
license-file:  LICENSE
author:        birdgg
maintainer:    birdgg
category:      Network, Effect
build-type:    Simple
extra-doc-files: CHANGELOG.md
tested-with:
  GHC == 9.12.2,
  GHC == 9.14.1

source-repository head
  type:     git
  location: https://github.com/birdgg/qbittorrent-hs.git

library
  exposed-modules:  Effectful.QBittorrent
  build-depends:
    , base >= 4.21 && < 5
    , bytestring >= 0.11
    , containers >= 0.6
    , effectful-core >= 2.3 && < 3
    , qbittorrent
    , servant >= 0.20
    , servant-client >= 0.20
    , text >= 2.0
  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall
  default-extensions:
    DataKinds
    TypeFamilies
    OverloadedStrings
